--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "next": "14.2.5",
+    "prisma": "^5.22.0",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -33,7 +34,7 @@
     "@storybook/nextjs": "^8.2.8",
     "@storybook/react": "^8.2.8",
     "@storybook/test": "^8.2.8",
-    "@types/node": "^20",
+    "@types/node": "^20.17.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "cross-env": "^7.0.3",
