--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "next": "14.2.5",
     "prisma": "^5.22.0",
     "react": "^18",
